@startuml
title SO DO LOP 3 TANG - QUAN LY CHINH SACH HOAN COC (UC 1.4.28)

top to bottom direction
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 75
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #FFFACD
  BorderColor #9B7B7B
}

package "TANG GIAO DIEN" as GUI_LAYER #EDF9EC {
  class MHQuanLyChinhSachHoanCoc #BFE8BA {
    - txtTenChinhSach: TextBox
    - dtNgayApDung: DateInput
    - dtNgayKetThuc: DateInput
    - txtMocLuuTru: NumberInput
    - txtTiLe_ChuaKy: NumberInput
    - txtTiLe_TruocHan_NganHan: NumberInput
    - txtTiLe_TruocHan_DaiHan: NumberInput
    - txtTiLe_DungHan: NumberInput
    - tblLichSuApDung: Table
    - btnTaoPhienBan: Button
    --
    + taiDanhSachChinhSach()
    + nhapPhienBanMoi(chinhSach: ChinhSachHoanCoc)
    + xacNhanTaoPhienBan()
  }
}

package "TANG NGHIEP VU" as BUS_LAYER #FFF9E6 {
  class QuanLyChinhSachHoanCoc #F4E3A2 {
    + LayDanhSach(): List<ChinhSachHoanCoc>
    + TaoPhienBan(chinhSachMoi: ChinhSachHoanCoc): ChinhSachHoanCoc
  }

  class ChinhSachHoanCoc #F4E3A2 {
    - MaChinhSach: String
    - TenChinhSach: String
    - TiLe_ChuaKy: Decimal
    - TiLe_TruocHan_NganHan: Decimal
    - TiLe_TruocHan_DaiHan: Decimal
    - TiLe_DungHan: Decimal
    - MocLuuTru: Integer
    - NgayApDung: Date
    - NgayKetThuc: Date
    --
    + LayDanhSach(): List<ChinhSachHoanCoc>
    + LayPhienBanMoiNhat(): ChinhSachHoanCoc
    + KiemTraDuLieuHopLe()
    + Them()
    + CapNhatNgayKetThuc(ngayKetThuc: Date)
  }
}

package "TANG TRUY CAP DU LIEU" as DAL_LAYER #EDF6FC {
  class ChinhSachHoanCocDB #BFDCF0 {
    + LayDanhSach(): List<ChinhSachHoanCoc>
    + LayPhienBanMoiNhat(): ChinhSachHoanCoc
    + Them(chinhSach: ChinhSachHoanCoc)
    + CapNhatNgayKetThuc(maChinhSach: String, ngayKetThuc: Date)
  }
}

MHQuanLyChinhSachHoanCoc o-- QuanLyChinhSachHoanCoc
QuanLyChinhSachHoanCoc o-- ChinhSachHoanCoc
ChinhSachHoanCoc o-- ChinhSachHoanCocDB


GUI_LAYER -[hidden]down- BUS_LAYER
BUS_LAYER -[hidden]down- DAL_LAYER
QuanLyChinhSachHoanCoc -[hidden]down- ChinhSachHoanCocDB
@enduml
